# auto-trading-system

./: .gitattributes  WORKSPACE  ats_deps.bzl  buildifier_deps.bzl  test_lib.lib
open/: BUILD.bazel  open_file.txt  open_greet.cc  open_greet.go
secret/: BUILD.bazel  secret_file.txt  secret_greet.cc
test/: BUILD.bazel  dll_load_example.cc  dll_load_example.go  test_lib.cc  test_lib.h
